--- a/nthweek/ola-demo/src/assets/slider.css
+++ b/nthweek/ola-demo/src/assets/slider.css
@@ -9,7 +9,7 @@
 	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
 	left: 0;
 	right: 0;
-	top: -48px;
+	top: -50px;
 	z-index: 3;
 	letter-spacing: 0.3px;
 	width: 100%;
@@ -17,7 +17,21 @@
 	display: block;
 }
 
+.img-holder {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 .max-width {
 	max-width: 1200px;
 	margin: auto;
+}
+
+@media only screen and (max-width: 768px){
+	.offers-container .offers-wrapper {
+		top: 0;
+		background-color: #000000;
+		display: block;
+		position: relative;
+	}
 }
